--- a/src/client/View/Event/EventListView.fxml
+++ b/src/client/View/Event/EventListView.fxml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="880.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EventListViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="880.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EventListViewController">
    <children>
       <GridPane alignment="CENTER" prefHeight="175.0" prefWidth="794.0">
         <columnConstraints>
@@ -35,7 +44,12 @@
                               <Font size="22.0" />
                            </font>
                         </Label>
-                        <DatePicker fx:id="searchDate" prefHeight="30.0" prefWidth="302.0" />
+                        <TextField fx:id="ySTextField" prefHeight="33.0" prefWidth="90.0" promptText="Year" />
+                        <Label prefHeight="29.0" prefWidth="20.0" text="  :  " />
+                        <TextField fx:id="mSTextField" prefHeight="33.0" prefWidth="89.0" promptText="Month" />
+                        <Label prefHeight="29.0" prefWidth="20.0" text="  :  " />
+                        <TextField fx:id="dSTextField" prefHeight="33.0" prefWidth="80.0" promptText="Day" />
+                        <Label prefHeight="15.0" prefWidth="173.0" text="      Only digits allow." />
                      </children>
                   </HBox>
                </children>
