--- a/src/client/View/Event/EventListView.fxml
+++ b/src/client/View/Event/EventListView.fxml
@@ -1,19 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="880.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EventListViewController">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="880.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EventListViewController">
    <children>
       <GridPane alignment="CENTER" prefHeight="175.0" prefWidth="794.0">
         <columnConstraints>
@@ -85,19 +76,19 @@
       </GridPane>
       <VBox alignment="TOP_RIGHT" prefHeight="342.0" prefWidth="794.0">
          <children>
-            <ScrollPane prefHeight="343.0" prefWidth="887.0">
+            <ScrollPane prefHeight="340.0" prefWidth="880.0">
                <content>
-                  <TableView fx:id="eventList" prefHeight="340.0" prefWidth="867.0">
+                  <TableView fx:id="eventList" prefHeight="335.0" prefWidth="854.0">
                     <columns>
                         <TableColumn fx:id="idColumn" prefWidth="53.0" text="ID" />
                       <TableColumn fx:id="titleColumn" prefWidth="90.0" text="Title" />
-                      <TableColumn fx:id="descriptionColumn" prefWidth="128.0" text="Description" />
-                        <TableColumn fx:id="creatTColumn" prefWidth="158.0" text="Create time" />
-                        <TableColumn fx:id="dateColumn" prefWidth="158.0" text="Date" />
-                        <TableColumn fx:id="endTColumn" text="End time" />
-                        <TableColumn fx:id="isOnlineColumn" prefWidth="55.0" text="Online ?" />
-                        <TableColumn fx:id="platformColumn" prefWidth="88.0" text="Platform" />
-                        <TableColumn fx:id="roomColumn" prefWidth="52.0" text="Room" />
+                      <TableColumn fx:id="descriptionColumn" prefWidth="93.0" text="Description" />
+                        <TableColumn fx:id="creatTColumn" prefWidth="115.0" text="Create time" />
+                        <TableColumn fx:id="dateColumn" prefWidth="125.0" text="Date" />
+                        <TableColumn fx:id="endTColumn" prefWidth="155.0" text="End time" />
+                        <TableColumn fx:id="isOnlineColumn" prefWidth="63.0" text="Online ?" />
+                        <TableColumn fx:id="platformColumn" prefWidth="90.0" text="Platform" />
+                        <TableColumn fx:id="roomColumn" prefWidth="78.0" text="Room" />
                     </columns>
                   </TableView>
                </content>
