--- a/src/client/View/Event/CreateEventView.fxml
+++ b/src/client/View/Event/CreateEventView.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -14,18 +16,38 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="622.0" prefWidth="759.0" stylesheets="@../darkTheme.css"
-      xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.CreateEventViewController">
+<VBox prefHeight="622.0" prefWidth="759.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/16"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.CreateEventViewController">
     <children>
-      <HBox alignment="CENTER">
+      <GridPane prefHeight="95.0" prefWidth="866.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
          <children>
-              <Label alignment="CENTER" text="Create an event">
-                  <font>
-                      <Font size="41.0" />
-                  </font>
-              </Label>
+            <HBox alignment="CENTER" prefHeight="112.0" prefWidth="365.0" style="-fx-background-color: #7f878f;">
+               <children>
+                    <Label alignment="CENTER" text="Create an event">
+                        <font>
+                            <Font size="41.0" />
+                        </font>
+                    </Label>
+               </children>
+            </HBox>
+            <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #7f878f;" GridPane.columnIndex="1">
+               <children>
+                  <ImageView fitHeight="66.0" fitWidth="68.0">
+                     <image>
+                        <Image url="@../Icons/icons8-calendar-plus-100.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </VBox>
          </children>
-      </HBox>
+      </GridPane>
       <GridPane prefHeight="176.0" prefWidth="699.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="188.0" />
@@ -177,6 +199,13 @@
                <HBox.margin>
                   <Insets right="10.0" />
                </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="36.0" fitWidth="37.0">
+                     <image>
+                        <Image url="@../Icons/icons8-macbook-chat-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                 </Button>
                 <Button fx:id="physicalButton" mnemonicParsing="false" onAction="#physicalPress" prefHeight="42.0" prefWidth="142.0" text="Physical">
                     <font>
@@ -185,11 +214,25 @@
                <HBox.margin>
                   <Insets left="10.0" right="10.0" />
                </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="36.0" fitWidth="37.0">
+                     <image>
+                        <Image url="@../Icons/icons8-room-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                 </Button>
-            <Button mnemonicParsing="false" onAction="#resetPress" prefHeight="39.0" prefWidth="54.0" text="Reset">
+            <Button mnemonicParsing="false" onAction="#resetPress" prefHeight="39.0" prefWidth="54.0">
                <HBox.margin>
                   <Insets left="10.0" right="50.0" />
                </HBox.margin>
+               <graphic>
+                  <ImageView fitHeight="36.0" fitWidth="37.0">
+                     <image>
+                        <Image url="@../Icons/icons8-reset-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Button>
             </children>
          <VBox.margin>
