--- a/src/client/View/Event/EditEventView.fxml
+++ b/src/client/View/Event/EditEventView.fxml
@@ -7,6 +7,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
@@ -14,17 +16,38 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="622.0" prefWidth="759.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EditEventViewController">
+<VBox prefHeight="622.0" prefWidth="759.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/16"
+      xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.EditEventViewController">
     <children>
-        <HBox alignment="CENTER">
-            <children>
-                <Label alignment="CENTER" text="Edit an event">
-                    <font>
+      <GridPane prefHeight="95.0" prefWidth="866.0">
+         <columnConstraints>
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+         </columnConstraints>
+         <rowConstraints>
+            <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+         </rowConstraints>
+         <children>
+            <HBox alignment="CENTER" prefHeight="112.0" prefWidth="365.0" style="-fx-background-color: #7f878f;">
+               <children>
+                  <Label alignment="CENTER" text="Edit an event">
+                     <font>
                         <Font size="41.0" />
-                    </font>
-                </Label>
-            </children>
-        </HBox>
+                     </font>
+                  </Label>
+               </children>
+            </HBox>
+            <VBox alignment="CENTER_RIGHT" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #7f878f;" GridPane.columnIndex="1">
+               <children>
+                  <ImageView fitHeight="66.0" fitWidth="68.0">
+                     <image>
+                        <Image url="@../Icons/icons8-calendar-plus-100.png" />
+                     </image>
+                  </ImageView>
+               </children>
+            </VBox>
+         </children>
+      </GridPane>
         <GridPane prefHeight="176.0" prefWidth="699.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="188.0" />
@@ -105,10 +128,17 @@
                         <ChoiceBox fx:id="hourMenuS" prefHeight="26.0" prefWidth="84.0" />
                         <Label prefHeight="37.0" prefWidth="12.0" text=" :" />
                         <ChoiceBox fx:id="minuteMenuS" prefHeight="26.0" prefWidth="84.0" />
-                  <Label fx:id="startTimeLabel" onMouseMoved="#startTimeInfo" text=" ☻">
+                  <Label fx:id="startTimeLabel" onMouseMoved="#startTimeInfo" prefHeight="52.0" prefWidth="42.0">
                      <font>
-                        <Font size="25.0" />
+                        <Font size="15.0" />
                      </font>
+                     <graphic>
+                        <ImageView fitHeight="36.0" fitWidth="37.0">
+                           <image>
+                              <Image url="@../Icons/icons8-help-100.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Label>
                     </children>
                     <GridPane.margin>
@@ -132,10 +162,17 @@
                             </children>
                         </HBox>
                         <ChoiceBox fx:id="minuteMenuE" prefHeight="26.0" prefWidth="84.0" />
-                  <Label fx:id="endTimeLabel" onMouseMoved="#endTimeInfo" text=" ☻">
+                  <Label fx:id="endTimeLabel" onMouseMoved="#endTimeInfo">
                      <font>
                         <Font size="25.0" />
                      </font>
+                     <graphic>
+                        <ImageView fitHeight="36.0" fitWidth="37.0">
+                           <image>
+                              <Image url="@../Icons/icons8-help-100.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                   </Label>
                     </children>
                     <GridPane.margin>
@@ -179,31 +216,52 @@
                         <Insets right="10.0" />
                     </HBox.margin>
                 </Label>
-                <Button fx:id="onlineButton" mnemonicParsing="false" onAction="#onlinePress" prefHeight="42.0" prefWidth="142.0" text="Online">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                    <HBox.margin>
-                        <Insets right="10.0" />
-                    </HBox.margin>
-                </Button>
-                <Button fx:id="physicalButton" mnemonicParsing="false" onAction="#physicalPress" prefHeight="42.0" prefWidth="142.0" text="Physical">
-                    <font>
-                        <Font size="18.0" />
-                    </font>
-                    <HBox.margin>
-                        <Insets left="10.0" right="10.0" />
-                    </HBox.margin>
-                </Button>
-                <Button fx:id="resetButton" mnemonicParsing="false" onAction="#resetPress" prefHeight="39.0" prefWidth="54.0" text="Reset">
-                    <HBox.margin>
-                        <Insets left="10.0" right="50.0" />
-                    </HBox.margin>
-                </Button>
-            <Label fx:id="buttonLabel" onMouseMoved="#buttonInfo" text=" ☻">
+            <Button fx:id="onlineButton" mnemonicParsing="false" onAction="#onlinePress" prefHeight="41.0" prefWidth="142.0" text="Online">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="36.0" fitWidth="37.0">
+                     <image>
+                        <Image url="@../Icons/icons8-macbook-chat-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Label text="   " />
+            <Button fx:id="physicalButton" mnemonicParsing="false" onAction="#physicalPress" prefHeight="42.0" prefWidth="142.0" text="Physical">
+               <font>
+                  <Font size="18.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="36.0" fitWidth="37.0">
+                     <image>
+                        <Image url="@../Icons/icons8-room-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Label text="   " />
+            <Button fx:id="resetButton" mnemonicParsing="false" onAction="#resetPress" prefHeight="39.0" prefWidth="54.0">
+               <graphic>
+                  <ImageView fitHeight="36.0" fitWidth="37.0">
+                     <image>
+                        <Image url="@../Icons/icons8-reset-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Label fx:id="buttonLabel" onMouseMoved="#buttonInfo">
                <font>
                   <Font size="25.0" />
                </font>
+               <graphic>
+                  <ImageView fitHeight="36.0" fitWidth="37.0">
+                     <image>
+                        <Image url="@../Icons/icons8-help-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </Label>
             </children>
             <VBox.margin>
@@ -240,6 +298,18 @@
                         <Insets left="10.0" />
                     </HBox.margin>
                 </HBox>
+            <Label fx:id="roomInfoLabel" onMouseMoved="#roomInfo">
+               <font>
+                  <Font size="25.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="36.0" fitWidth="37.0">
+                     <image>
+                        <Image url="@../Icons/icons8-help-100.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Label>
             </children>
             <VBox.margin>
                 <Insets bottom="10.0" />
