--- a/src/client/View/Login/LoginView.fxml
+++ b/src/client/View/Login/LoginView.fxml
@@ -53,11 +53,11 @@
                   <TextField fx:id="userTextField" onAction="#onEnter" prefHeight="48.0" prefWidth="360.0" />
                </children>
             </HBox>
-            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <HBox fx:id="rootVBox" alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
                   <PasswordField fx:id="passField" onAction="#onEnter" prefHeight="48.0" prefWidth="333.0" />
                   <Label prefHeight="15.0" prefWidth="14.0" text=" " />
-                  <Button mnemonicParsing="false" onMouseMoved="#showPress" prefHeight="21.0" prefWidth="0.0">
+                  <Button fx:id="showButton" mnemonicParsing="false" onMousePressed="#showPress" prefHeight="21.0" prefWidth="0.0">
                      <graphic>
                         <ImageView fitHeight="23.0" fitWidth="22.0">
                            <image>
