--- a/src/client/View/Event/CreateEventView.fxml
+++ b/src/client/View/Event/CreateEventView.fxml
@@ -1,24 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<VBox prefHeight="710.0" prefWidth="759.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.CreateEventViewController">
+<VBox prefHeight="710.0" prefWidth="759.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.CreateEventViewController">
     <children>
       <GridPane prefHeight="95.0" prefWidth="866.0">
          <columnConstraints>
@@ -330,10 +318,10 @@
          <children>
             <TableView fx:id="participantTable" prefHeight="200.0" prefWidth="200.0">
               <columns>
-                <TableColumn fx:id="usernameColumn" prefWidth="250.0" text="Username" />
-                <TableColumn fx:id="nameColumn" minWidth="0.0" prefWidth="231.0" text="Name" />
-                  <TableColumn fx:id="idColumn" minWidth="0.0" prefWidth="81.0" text="ID" />
-                  <TableColumn fx:id="roleColumn" minWidth="0.0" prefWidth="173.0" text="Role" />
+                <TableColumn fx:id="usernameColumn" prefWidth="285.0" text="Username" />
+                <TableColumn fx:id="nameColumn" minWidth="0.0" prefWidth="242.0" text="Name" />
+                  <TableColumn fx:id="idColumn" minWidth="0.0" prefWidth="83.0" text="ID" />
+                  <TableColumn fx:id="roleColumn" minWidth="0.0" prefWidth="125.0" text="Role" />
               </columns>
             </TableView>
          </children>
