--- a/src/client/View/Event/CreateEventView.fxml
+++ b/src/client/View/Event/CreateEventView.fxml
@@ -1,12 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<VBox prefHeight="710.0" prefWidth="759.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.CreateEventViewController">
+<VBox prefHeight="918.0" prefWidth="759.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.CreateEventViewController">
     <children>
       <GridPane prefHeight="95.0" prefWidth="866.0">
          <columnConstraints>
@@ -326,6 +338,7 @@
             </TableView>
          </children>
       </VBox>
+      <Label text="  " />
         <HBox alignment="CENTER_RIGHT">
             <children>
                 <Button mnemonicParsing="false" onAction="#cancelPress" prefHeight="42.0" prefWidth="102.0" text="Cancel">
