--- a/src/client/View/Event/CreateEventView.fxml
+++ b/src/client/View/Event/CreateEventView.fxml
@@ -18,35 +18,30 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="918.0" prefWidth="759.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.CreateEventViewController">
+<VBox alignment="TOP_CENTER" prefHeight="736.0" prefWidth="1015.0" stylesheets="@../darkTheme.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.View.Event.CreateEventViewController">
     <children>
       <GridPane prefHeight="95.0" prefWidth="866.0">
          <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
          </columnConstraints>
          <rowConstraints>
             <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
          </rowConstraints>
          <children>
-            <HBox alignment="CENTER" prefHeight="112.0" prefWidth="365.0" style="-fx-background-color: #7f878f;">
+            <HBox alignment="CENTER" style="-fx-background-color: #7f878f;">
                <children>
                     <Label alignment="CENTER" text="Create an event">
                         <font>
                             <Font size="41.0" />
                         </font>
                     </Label>
-               </children>
-            </HBox>
-            <VBox alignment="CENTER_RIGHT" prefHeight="38.0" prefWidth="237.0" style="-fx-background-color: #7f878f;" GridPane.columnIndex="1">
-               <children>
                   <ImageView fitHeight="66.0" fitWidth="68.0">
                      <image>
                         <Image url="@../Icons/icons8-calendar-plus-100.png" />
                      </image>
                   </ImageView>
                </children>
-            </VBox>
+            </HBox>
          </children>
       </GridPane>
       <GridPane prefHeight="176.0" prefWidth="699.0">
